Bug 403174 - KAddressBook looses contact birthdays when merging two or more contacts
Summary: KAddressBook looses contact birthdays when merging two or more contacts
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-01-13 13:49 UTC by Dennis Schridde
Modified: 2019-01-14 12:48 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.10.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dennis Schridde 2019-01-13 13:49:35 UTC
SUMMARY
KAddressBook looses contact birthdays when merging two or more contacts

STEPS TO REPRODUCE
1. Have a contact with birthday data and with duplicates
2. Select them using ctrl+click or shift+click
3. Tools > Merge Contacts
4. Mark the contacts to merge, again
5. Click "merge"

OBSERVED RESULT
The merged contacts has no birthday information anymore

EXPECTED RESULT
Birthday information should be kept

SOFTWARE/OS VERSIONS
Linux: 4.20.1
KDE Plasma Version: 5.10.1
KDE Applications Version: 18.12.1
KDE Frameworks Version: 5.53.0
Qt Version: 5.11.3
Comment 1 Dennis Schridde 2019-01-13 13:50:47 UTC
The addressbook data comes from a NextCloud instance, via CardDAV.
Comment 2 Dennis Schridde 2019-01-13 13:52:56 UTC
Not reproducible with every contact. Possible precondition: One contact has a birthday set, while the other does not.
Comment 3 Laurent Montel 2019-01-14 07:52:17 UTC
I confirm it.
Comment 4 Laurent Montel 2019-01-14 12:48:14 UTC
Git commit 079955d78d0ba6e1a1cafae91a669253a400acdb by Laurent Montel.
Committed on 14/01/2019 at 12:47.
Pushed by mlaurent into branch 'Applications/18.12'.

Fix Bug 403174 - KAddressBook looses contact birthdays when merging two or more contacts

FIXED-IN: 5.10.2

M  +5    -2    kaddressbook/plugins/mergelib/autotests/mergecontactstest.cpp
M  +8    -4    kaddressbook/plugins/mergelib/job/mergecontacts.cpp
M  +3    -3    kaddressbook/plugins/mergelib/searchduplicate/searchduplicateresultwidget.cpp

https://commits.kde.org/kdepim-addons/079955d78d0ba6e1a1cafae91a669253a400acdb