Fix Bug 403174 - KAddressBook looses contact birthdays when merging two or more contacts

FIXED-IN: 5.10.2
BUG: 403174